--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "-": "0.0.1",
     "bootstrap": "^3.4.1",
+    "ejs": "^3.1.5",
     "express": "^4.17.1",
     "g": "^2.0.1",
     "jquery": "^3.5.1",
