--- a/package.json
+++ b/package.json
@@ -17,6 +17,13 @@
     "jquery": "^3.5.1",
     "mongodb": "^3.6.2",
     "mongoose": "^5.10.6",
-    "npm": "^6.14.8"
+    "npm": "^6.14.8",
+    "really-need": "^1.9.2",
+    "supertest": "^4.0.2"
+  },
+  "devDependencies": {
+    "chai": "^4.2.0",
+    "chai-http": "git+https://github.com/chaijs/chai-http.git#3ea4524",
+    "mocha": "^8.1.3"
   }
 }
